<resources>
    <string name="app_name">Assignment2</string>
    <string name="updatebut">View and Update Locations</string>
    <string name="searchbut">Search for Location</string>
    <string name="addLocation">Add new Location</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
</resources>