<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lat"
                android:textColor="#000"
                app:layout_constraintEnd_toStartOf="@+id/Longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lon"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/latitude"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/latTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                app:layout_constraintBottom_toTopOf="@+id/latitude"
                app:layout_constraintStart_toStartOf="@+id/latitude" />

            <TextView
                android:id="@+id/lonTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                app:layout_constraintBottom_toTopOf="@+id/Longitude"
                app:layout_constraintStart_toStartOf="@+id/Longitude" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>